# fivesongsdaily

./: .gitignore  NOTES.txt  README.md  feeds.py  local_settings.py  pyproject.toml  requirements.txt  settings.py  urls.py  uwsgi.ini  wsgi.py
.github/scripts/: post_id.txt  smpost.py
.github/workflows/: cicd.yaml  cron.yaml
contact/: forms.py  urls.py  views.py
contact/templates/: contact.html  contact_notification.txt
fivesongs/: __init__.py  admin.py  auth.py  db.py  disallowed.py  models.py  playlist.py  schema.sql  track.py
fivesongs/static/: robots.txt
fivesongs/templates/: admin.html  adminbase.html  audioplayer.html  base.html  index.html
instance/: fivesongs.sqlite3
message/: admin.py  models.py  urls.py  views.py
message/templates/: messages.html
pages/: urls.py
pages/templates/: about.html
playlist/: admin.py  forms.py  models.py  urls.py  views.py
playlist/templates/: archive.html  archive_list.html  home.html  main_player.html  message_notification.txt  playlist_comments.html  playlist_save.html  single.html  song_add.html
profiles/: admin.py  forms.py  models.py  urls.py  views.py
profiles/data/: choices.py
profiles/templates/: edit_profile.html  search_results.html  search_users.html  view_another_users_profile.html  view_profile.html
scripts/: resize.py  song_prep.py
site_media/css/: fivesongs.css
templates/: base.html  footer.html  header.html
templates/admin/: base_site.html
templates/comments/: posted.html  preview.html
templates/registration/: logged_out.html  password_reset_complete.html  (+3 more)
(+28 files in other folders)
