[project]
name = "fivesongs"
version = "1.0.0"
description = "Daily five song playlist"
dependencies = [
    "click==8.1.8",
    "feedgen==1.0.0",
    "Flask==3.0.3",
    "Flask-Admin==1.6.1",
    "Flask-Caching==2.3.1",
    "Flask-SQLAlchemy==3.1.1",
    "gunicorn>=23.0.0",
    "pillow==11.1.0",
    "requests==2.32.3",
    "SQLAlchemy==2.0.38",
    "tinytag==2.1.0",
    "user-agents==2.2.0",
    "uWSGI==2.0.28",
    "Werkzeug==3.1.3"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
